--- a/client/partial/movies.html
+++ b/client/partial/movies.html
@@ -1,7 +1,7 @@
 <h1>Movie List</h1>
 
 <p>
-    <a class="btn btn-primary" ng-click="add()">Add Movie</a>
+    <a class="btn btn-primary" href="#" ng-href="/movies/new">Add Movie</a>
 </p>
 
 <div ng-include="'/partial/movies/list.html'"></div>
