--- a/client/partial/movies/list.html
+++ b/client/partial/movies/list.html
@@ -1,17 +1,14 @@
-<h1>Movie List</h1>
-
-<p>
-    <a class="btn btn-primary" ng-click="add()">Add Movie</a>
-</p>
-
+<pre>Sorting predicate = {{predicate}}; reverse = {{reverse}}</pre>
 <table class="table table-striped table-hover">
     <thead>
         <tr>
-            <th>Title</th>
+            <th>
+                <a href="" ng-click="predicate = 'title'; reverse=!reverse">Title</a>
+            </th>
         </tr>
     </thead>
     <tbody>
-        <tr ng-repeat="movie in movies">
+        <tr ng-repeat="movie in movies | orderBy:predicate:reverse">
             <td>
                 <a href="#" ng-href="/movies/{{movie.id}}">
                     {{movie.title}}
