add frontend for actor crud

--- a/client/partial/actors/list.html
+++ b/client/partial/actors/list.html
@@ -1,3 +1,18 @@
-<h4>This is work in progress...</h4>
-
-<p>You'll be work with actors soon.</p>
+<table class="table table-striped table-hover">
+    <thead>
+        <tr>
+            <th>
+                <a href="" ng-click="predicate = 'name'; reverse=!reverse">Title</a>
+            </th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr ng-repeat="actor in actors | orderBy:predicate:reverse">
+            <td>
+                <a href="#" ng-href="/actor/{{actor.id}}">
+                    {{actor.name}}
+                </a>
+            </td>
+        </tr>
+    </tbody>
+</table>
