--- a/client/partial/actors/list.html
+++ b/client/partial/actors/list.html
@@ -1,16 +1,30 @@
 <table class="table table-striped table-hover">
     <thead>
         <tr>
+            <th></th>
             <th>
                 <a href="" ng-click="predicate = 'name'; reverse=!reverse">Title</a>
+            </th>
+            <th>
+                <a href="" ng-click="predicate = 'name'; reverse=!reverse">Id</a>
             </th>
         </tr>
     </thead>
     <tbody>
         <tr ng-repeat="actor in actors | orderBy:predicate:reverse">
+            <td width="50px">
+                <a href="#" ng-href="/actors/{{actor.id}}">
+                    <img src="http://www.net-files.de/images/icon-search-small.png" />
+                </a>
+            </td>
             <td>
                 <a href="#" ng-href="/actor/{{actor.id}}">
                     {{actor.name}}
+                </a>
+            </td>
+            <td>
+                <a href="#" ng-href="/actor/{{actor.id}}">
+                    {{actor.id}}
                 </a>
             </td>
         </tr>
