--- a/client/partial/actors/list.html
+++ b/client/partial/actors/list.html
@@ -6,7 +6,7 @@
                 <a href="" ng-click="predicate = 'name'; reverse=!reverse">Title</a>
             </th>
             <th>
-                <a href="" ng-click="predicate = 'name'; reverse=!reverse">Id</a>
+                <a href="" ng-click="predicate = 'id'; reverse=!reverse">Id</a>
             </th>
         </tr>
     </thead>
@@ -23,7 +23,7 @@
                 </a>
             </td>
             <td>
-                <a href="#" ng-href="/actor/{{actor.id}}">
+                <a href="#" ng-href="/actors/{{actor.id}}">
                     {{actor.id}}
                 </a>
             </td>
