added hard coded icon to details page

--- a/client/partial/actors/detail.html
+++ b/client/partial/actors/detail.html
@@ -12,3 +12,8 @@
 <button ng-click="delete()" title="Delete actor" class="btn btn-danger">
     Delete
 </button>
+
+<br>
+<br>
+
+<img src="http://logonoid.com/images/iron-man-logo.jpg" width="500px" />
