added icon, update list view

--- a/client/partial/actors/list.html
+++ b/client/partial/actors/list.html
@@ -14,7 +14,7 @@
         <tr ng-repeat="actor in actors | orderBy:predicate:reverse">
             <td width="50px">
                 <a href="#" ng-href="/actors/{{actor.id}}">
-                    <img src="http://www.net-files.de/images/icon-search-small.png" />
+                    <img src="/img/icon-search-small.png" />
                 </a>
             </td>
             <td>
