--- a/client/partial/movies/list.html
+++ b/client/partial/movies/list.html
@@ -10,7 +10,7 @@
         <tr ng-repeat="movie in movies | orderBy:predicate:reverse">
             <td>
                 <a href="#" ng-href="/movies/{{movie.id}}">
-                    <img src="https://helpdesk.datcom.ch/helpdesk/info_icon_small.gif" />
+                     <img src="/img/icon-search-small.png" />
                 </a>
             </td>
             <td>
