bugfix jetzt aber

--- a/client/partial/actors/list.html
+++ b/client/partial/actors/list.html
@@ -9,7 +9,7 @@
     <tbody>
         <tr ng-repeat="actor in actors | orderBy:predicate:reverse">
             <td>
-                <a href="#" ng-href="/actor/{{actor.id}}">
+                <a href="#" ng-href="/actors/{{actor.id}}">
                     {{actor.name}}
                 </a>
             </td>
