--- a/client/partial/notFound.html
+++ b/client/partial/notFound.html
@@ -5,4 +5,4 @@
     cheer you up?
 </p>
 
-<img src="img/movie.gif" alt="Super awesome cop catching a bad guy!">
+<img src="img/arsch.jpg" alt="Super awesome cop catching a bad guy!">
